# cadence_beat

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  buildozer.spec  pyproject.toml
src/: example.py  main.py  service_audio.py
src/service_audio/: main.py
src/states/: create_metronome.py  review_metronome.py  run_metronome.py  start_menu.py  state.py
